# capibara

./: .gitignore  LICENSE  README.md  debug_capibara.py  demo.py  pyproject.toml  requirements.txt  setup.py  setup_dev.sh  test_capibara.py  test_sdk.py
.capibara/scripts/1080b517af37290d/: README.md  manifest.json  script.py
.capibara/scripts/1710999b2b1cd883/: README.md  manifest.json  script.py
.capibara/scripts/2e78b198b93367ba/: README.md  manifest.json  script.py
.capibara/scripts/2fa47b7b26658b40/: README.md  manifest.json  script.py
.capibara/scripts/4052a568d528822c/: README.md  manifest.json  script.py
.capibara/scripts/58f32efd9e41e0c2/: README.md  manifest.json  script.py
.capibara/scripts/6729012c53096dcd/: manifest.json  script.py
.capibara/scripts/864e5aae0781f078/: README.md  manifest.json  script.py
.capibara/scripts/9406aeebfa2aa979/: README.md  manifest.json  script.py
.capibara/scripts/a7fb4161e83cf7af/: README.md  manifest.json  script.py
.capibara/scripts/b4b8f03b25a5712b/: README.md  manifest.json  script.py
.capibara/scripts/b6405e8f86be9cff/: manifest.json
.capibara/scripts/c5026c88912de07e/: README.md  manifest.json  script.py
.capibara/scripts/dcd2153089cc74c2/: README.md  manifest.json  script.py
.capibara/scripts/e8203040d21f5159/: README.md  manifest.json  script.py
examples/: groq_example.py  mercadolibre_api.py  video_concat.py
src/capibara/: __init__.py
src/capibara.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/capibara/cli/: __init__.py  main.py
src/capibara/core/: __init__.py  llm_service.py  models.py  service.py
src/capibara/sdk/: __init__.py  client.py
src/capibara/utils/: __init__.py  fingerprint.py  runner.py  security.py
